--- a/address-book.html
+++ b/address-book.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div class="container"></div>
-
+    <h1>Address book</h1>
+    <div class="row">
+     <div class="col-md-6">
+       <h2>Add a contact:</h2>
 
 
 
