--- a/address-book.html
+++ b/address-book.html
@@ -18,12 +18,12 @@
               <label for="new-first-name">First name</label>
               <input type="text" class="form-control" id="new-first-name">
             </div>
-            <div class="form-group">
+            <div class="form-group"><br>
               <label for="new-last-name">Last name</label>
               <input type="text" class="form-control" id="new-last-name">
             </div>
 
-            <button type="submit" class="btn">Add</button>
+            <button type="submit" style="background-color:mediumvioletred"class="btn">Add</button>
           </form>
 
           <h2>Contacts:</h2>
